bug:card header text jumped under image on small devices

--- a/css/index.css
+++ b/css/index.css
@@ -125,6 +125,7 @@ a {
 }
 
 .card {
+  min-width: 400px;
   margin-bottom: 10px;
   margin-left: 5px;
   margin-right: 5px;
